...
            const val feeFastButton = "send.confirm.feeFastButton"
            const val feeMediumButton = "send.confirm.feeMediumButton"
            const val feeSlowButton = "send.confirm.feeSlowButton"
        }
        const val currencyButton = "send.currencyButton"
        const val currencyLabel = "send.currencyLabel"
        const val nextButton = "send.nextButton"
        const val pasteButton = "send.pasteButton"
        const val regularButton = "send.regularButton"
        const val scanButton = "send.scanButton"
        const val switchQuestionButton = "send.switchQuestionButton"
        const val toLabel = "send.toLabel"
        const val toTextField = "send.toTextField"
...
            }
            object Otp {
                const val codeButton = "signup.bittr.otp.codeButton"
                const val codeTextField = "signup.bittr.otp.codeTextField"
                const val nextButton = "signup.bittr.otp.nextButton"
                const val resendButton = "signup.bittr.otp.resendButton"
                const val topLabel = "signup.bittr.otp.topLabel"
            }
            object Start {
                const val emailButton = "signup.bittr.start.emailButton"
                const val emailTextField = "signup.bittr.start.emailTextField"
                const val ibanButton = "signup.bittr.start.ibanButton"
                const val ibanTextField = "signup.bittr.start.ibanTextField"
...
            }
        }
        object Create {
            object Confirm {
                const val cancelButton = "signup.create.confirm.cancelButton"
                const val nextButton = "signup.create.confirm.nextButton"
                const val switchOne = "signup.create.confirm.switchOne"
                const val switchTwo = "signup.create.confirm.switchTwo"
                const val topLabel = "signup.create.confirm.topLabel"
            }
            object Mnemonic {
                const val mnemonicStack = "signup.create.mnemonic.mnemonicStack"
                const val nextButton = "signup.create.mnemonic.nextButton"
                const val topLabelOne = "signup.create.mnemonic.topLabelOne"
...
                const val createWalletButton = "signup.create.start.createWalletButton"
                const val headerLabel = "signup.create.start.headerLabel"
                const val restoreButton = "signup.create.start.restoreButton"
            }
            object Verify {
                const val backButton = "signup.create.verify.backButton"
                const val field1 = "signup.create.verify.field1"
                const val field2 = "signup.create.verify.field2"
                const val field3 = "signup.create.verify.field3"
                const val label1 = "signup.create.verify.label1"
                const val label2 = "signup.create.verify.label2"
                const val label3 = "signup.create.verify.label3"
                const val nextButton = "signup.create.verify.nextButton"
                const val topLabel = "signup.create.verify.topLabel"
            }
...
